@@ -37,3 +37,5 @@ Version 1.2.1
 + Added weeks() to DateShifter which means date(2013, 1, 1).add(7).weeks() is able to use
 
 + Made rh() accept up to 20 pairs
+
++ Added year(), month(), day(), dayOfWeek(), dayOfYear(), week(), weekOfMonth(), hour(), minute(), second() & millisecond() to RubyDate
